--- a/netaccess/netaccess_users/templates/base.html
+++ b/netaccess/netaccess_users/templates/base.html
@@ -6,23 +6,25 @@
     <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
 <body>
-    <div id="header">
+    <header>
         <span class="logo">Netaccess</span>
         {% if request.user.is_authenticated %}
+        <nav>
             <ul class="menu">
                 <li {% if section == "dashboard" %}class="selected"{% endif %}>
                     <a href="{% url "dashboard" %}">My dashboard</a>
                 </li>
                 <li {% if section == "keys" %}class="selected"{% endif %}>
-                    <a href="{% url "dashboard" %}">SSH keys</a>
+                    <a href="{% url "key-list" %}">SSH keys</a>
                 </li>
                 <li {% if section == "profile_settings" %}class="selected"{% endif %}>
-                    <a href="{% url "dashboard" %}">Profile Settings</a>
+                    <a href="{% url "profile-edit" %}">Profile Settings</a>
                 </li>
                 <li {% if section == "dhcp" %}class="selected"{% endif %}>
                     <a href="{% url "dashboard" %}">DHCP</a>
                 </li>
             </ul>
+        </nav>
         {% endif %}
         <span class="user">
             {% if request.user.is_authenticated %}
@@ -31,7 +33,7 @@
             <a href="{% url "login" %}">Log-in</a>
             {% endif %}
         </span>
-    </div>
+    </header>
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -42,9 +44,38 @@
         {% endfor %}
     </ul>
     {% endif %}
+    <div id="sidebar">
+        {% block sidebar %}
+        {% endblock %}
+    </div>
     <div id="content">
         {% block content %}
         {% endblock %}
     </div>
+    <footer>
+        <section>
+            <h4>Icons</h4>
+            <a href="https://www.flaticon.com/free-icons/access" title="access icons">Access icons created by Flat Icons - Flaticon</a>
+        </section>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+    $(document).ready(function(){
+        const csrftoken = Cookies.get('csrftoken');
+        function csrfSafeMethod(method) {
+            return /^GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if(!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
+        {% block domready %}
+        {% endblock %}
+    })
+    </script>
 </body>
 </html>
