--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -1,42 +1,71 @@
 {% extends "base.html" %}
+{% load matman_tags %}
 
 {% block title %}Add Material{% endblock %}
 
 {% block content %}
 <h1>{{ object }}</h1>
-<table>
-    <tr>
-        <th>Serial Number</th>
-        <td>{{ object.serial_number }}</td>
-    </tr>
-    <tr>
-        <th>Material Number</th>
-        <td>{{ object.material_number }}</td>
-    </tr>
-    <tr>
-        <th>Manufacturer</th>
-        <td>{{ object.manufacturer }}</td>
-    </tr>
-    <tr>
-        <th>Description</th>
-        <td>{{ object.description }}</td>
-    </tr>
-    <tr>
-        <th>Department</th>
-        <td>{{ object.department }}</td>
-    </tr>
-    <tr>
-        <th>Owner</th>
-        <td>{{ object.owner }}</td>
-    </tr>
-    <tr>
-        <th>Active</th>
-        <td>{{ object.is_active }}</td>
-    </tr>
-</table>
-<a href="{% url "material-edit" object.identifier %}">Edit</a>
+<section>
+    <table class="vertical-table">
+        <tr>
+            <th>Serial Number:</th>
+            <td>{{ object.serial_number }}</td>
+        </tr>
+        <tr>
+            <th>Material Number:</th>
+            <td>{{ object.material_number }}</td>
+        </tr>
+        <tr>
+            <th>Manufacturer:</th>
+            <td>{{ object.manufacturer }}</td>
+        </tr>
+        <tr>
+            <th>Department:</th>
+            <td>{{ object.department }}</td>
+        </tr>
+        <tr>
+            <th>Location:</th>
+            <td>{{ object.location }}</td>
+        </tr>
+        <tr>
+            <th>Owner:</th>
+            <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
+        </tr>
+        <tr>
+            <th>Tags:</th>
+            <td>{{ object.tags.all|join:", " }}</td>
+        </tr>
+        <tr>
+            <th>Active:</th>
+            <td>{{ object.is_active }}</td>
+        </tr>
+        {% with borrow=object.get_active_borrow %}
+        <tr>
+            <th>Borrowed by:</th>
+            {% if borrow %}
+            <td><a href="{% url "profile" borrow.borrowed_by %}">{{ borrow.borrowed_by }}</a></td>
+            {% else %}
+            <td></td>
+            {% endif %}
+        </tr>
+        <tr>
+            <th>Borrowed at:</th>
+            <td>{{ object.get_active_borrow.borrowed_at|date }}</td>
+        </tr>
+        {% endwith %}
+    </table>
+    <h2>Description</h2>
+        <section class="descriptionbox">
+            {{ object.description|markdown }}
+        </section>
+    <p><a class="button" href="{% url "material-edit" object.identifier %}">Edit</a></p>
+</section>
 
-{% if object.owner != user %}
-<a href="#">Borrow</a>
+
+{% if object.owner != user and not object.get_active_borrow %}
+<p><a class="button" href="{% url "borrow" object.identifier %}">Borrow</a></p>
+{% endif %}
+{% if object.get_active_borrow.borrowed_by == user %}
+<p><a class="button" href="{% url "return" object.identifier %}">Return</a></p>
 {% endif %}
 {% endblock %}
