Lots of changes, new features

--- a/netaccess/matman/templates/base.html
+++ b/netaccess/matman/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <link href="{% static "css/slideshow.css" %}" rel="stylesheet">
 </head>
 <body>
     <header>
