--- a/netaccess/matman/static/css/base.css
+++ b/netaccess/matman/static/css/base.css
@@ -34,11 +34,6 @@ body {
     padding:0;
     font-family:helvetica, sans-serif;
     min-height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-footer{
-    margin-top: auto;
 }
 
 p {
@@ -116,7 +111,7 @@ header .user {
 }
 
 footer{
-    width:100%;
+    display: block;
     bottom:0%;
     /* padding-top:4px; */
     padding:10px 100px;
@@ -124,7 +119,6 @@ footer{
     background:var(--green2);
     color:var(--white);
     border-bottom:4px solid var(--green1);
-    /* overflow:auto; */
 }
 
 #content {
