--- a/netaccess/matman/templates/matman/borrow_done.html
+++ b/netaccess/matman/templates/matman/borrow_done.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap5 %}
 
 {% block title %}Return {{ material }}{% endblock %}
 
@@ -7,9 +8,11 @@
   <p>Do you want to return {{ material }}?</p>
   <p>IMPORTANT: Only do this when you physically return the material! Not anytime before!</p>
   <form method="post">
-    {{ form.as_p }}
     {% csrf_token %}
-    <input type="submit" value="No, go back" name="no">
-    <input type="submit" value="Yes, return {{ material }}" name="yes">
+    {% bootstrap_form form %}
+    {% buttons %}
+    <input type="submit" value="No, go back" name="no" class="btn btn-secondary">
+    <input type="submit" value="Yes, return {{ material }}" name="yes" class="btn btn-primary">
+    {% endbuttons %}
   </form>
 {% endblock %}
