--- a/netaccess/matman/templates/matman/scheme_create.html
+++ b/netaccess/matman/templates/matman/scheme_create.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap5 %}
 
 {% block title %}Add Material{% endblock %}
 
@@ -6,7 +7,9 @@
 <h1>Create new Scheme</h1>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" name="save">
+    {% bootstrap_form form %}
+    {% buttons %}
+    <input type="submit" value="Save" class="btn btn-primary">
+    {% endbuttons %}
 </form>
 {% endblock %}
