--- a/netaccess/matman/templates/matman/scheme_edit.html
+++ b/netaccess/matman/templates/matman/scheme_edit.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap5 %}
 
 {% block title %}Add Material{% endblock %}
 
@@ -15,12 +16,14 @@
     </tr>
     <tr>
         <th>Postfix:</th>
-        <td>{{ object.prefix }}</td>
+        <td>{{ object.postfix }}</td>
     </tr>
 </table>
 <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Update">
+     {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    <input type="submit" value="Update" class="btn btn-primary">
+    {% endbuttons %}
 </form>
 {% endblock %}
