--- a/netaccess/matman/templates/matman/userprofile_edit.html
+++ b/netaccess/matman/templates/matman/userprofile_edit.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap5 %}
 
 {% block title %}Profile Settings{% endblock %}
 
@@ -6,7 +7,9 @@
 <h1>Profile Settings</h1>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Update">
+    {% bootstrap_form form %}
+    {% buttons %}
+    <input type="submit" value="Update" class="btn btn-primary">
+    {% endbuttons %}
 </form>
 {% endblock %}
