--- a/netaccess/matman/templates/base.html
+++ b/netaccess/matman/templates/base.html
@@ -4,15 +4,11 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    {% comment %}
     <link href="{% static "css/base.css" %}" rel="stylesheet">
-    <link href="{% static "css/slideshow.css" %}" rel="stylesheet">
-    {% endcomment %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-
 </head>
-<body>
+<body class="d-flex flex-column h-100">
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
@@ -24,23 +20,20 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a href="{% url "home" %}" class="nav-link active" aria-current="page">Home</a>
+                    <a href="{% url "home" %}" class="nav-link" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "list-material" %}" class="nav-link active" aria-current="page">All Materials</a>
+                    <a href="{% url "list-material" %}" class="nav-link" aria-current="page">All Materials</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "add-material" %}" class="nav-link active" aria-current="page">Add Material</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url "list-schemes" %}" class="nav-link active" aria-current="page">Schemes</a>
+                    <a href="{% url "list-schemes" %}" class="nav-link" aria-current="page">Schemes</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Profile
                   </a>
                   <ul class="dropdown-menu">
-                      <li class="dropdown-item">
+                      <li>
                         <a href="{% url "profile-settings" %}" class="dropdown-item" aria-current="page">Settings</a>
                       </li>
                       <li><hr class="dropdown-divider"></li>
@@ -52,9 +45,13 @@
                   </ul>
                 </li>
               </ul>
-              <form class="d-flex" role="search" action="{% url "search" %}">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+              <form class="d-flex" role="search" action="{% url "search" %}" method="get">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
+                <button class="btn btn-outline-success" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
               </form>
             </div>
           </div>
@@ -62,11 +59,11 @@
     </header>
     {% bootstrap_messages %}
 
-    <main id="content">
+    <main id="content" class="m-10">
         {% block content %}
         {% endblock %}
     </main>
-    <footer class="bg-dark text-white">
+    <footer class="footer mt-auto py-3 bg-light m-1">
         <section>
             <h4>About</h4>
             <p>This software is licensed under the GPLv2. Source code is available at <a href="www.github.com/slarag/matman" target="_blank">Github</a></p>
