--- a/netaccess/matman/templates/matman/home.html
+++ b/netaccess/matman/templates/matman/home.html
@@ -5,10 +5,16 @@
 
 {% block content %}
 <h1>My Materials</h1>
-<section>
-    <h1>Materials I have currently borrowed ({{ borrowed| length }})</h1>
-    <section>
-        <table>
+<div class="accordion" id="itemAccorion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Materials I have currently borrowed ({{ borrowed| length }})
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+         <table class="table table-striped table-hover">
             <tr>
                 <th>ID</th>
                 <th>Owner</th>
@@ -33,30 +39,20 @@
             {% empty %}
             <tr><td>None</td></tr>
             {% endfor %}
-        </table>
-    </section>
-    <div class="pagination">
-        <span class="step-links">
-            {% if borrowed.has_previous %}
-                <a href="?borrowed_page=1">&laquo; first</a>
-                <a href="?borrowed_page={{ borrowed.previous_page_number }}">previous</a>
-            {% endif %}
-    
-            <span class="current">
-                Page {{ borrowed.number }} of {{ borrowed.paginator.num_pages }}.
-            </span>
-    
-            {% if borrowed.has_next %}
-                <a href="?borrowed_page={{ borrowed.next_page_number }}">next</a>
-                <a href="?borrowed_page={{ borrowed.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+         </table>
+         {% include "pagination.html" with page_obj=borrowed page_param="borrowed_page" %}
+      </div>
     </div>
-</section>
-<section>
-    <h1>Materials currently borrowed from me ({{ lent| length }})</h1>
-    <section>
-        <table>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Materials currently borrowed from me ({{ lent| length }})
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+         <table class="table table-striped table-hover">
             <tr>
                 <th>ID</th>
                 <th>Borrowed By</th>
@@ -83,30 +79,20 @@
             {% empty %}
             <tr><td>None</td></tr>
             {% endfor %}
-        </table>
-    </section>
-    <div class="pagination">
-        <span class="step-links">
-            {% if lent.has_previous %}
-                <a href="?lent_page=1">&laquo; first</a>
-                <a href="?lent_page={{ lent.previous_page_number }}">previous</a>
-            {% endif %}
-    
-            <span class="current">
-                Page {{ lent.number }} of {{ lent.paginator.num_pages }}.
-            </span>
-    
-            {% if lent.has_next %}
-                <a href="?lent_page={{ lent.next_page_number }}">next</a>
-                <a href="?lent_page={{ lent.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+         </table>
+         {% include "pagination.html" with page_obj=lent page_param="borrowed_page" %}
+      </div>
     </div>
-</section>
-<section>
-    <h1>Materials I own ({{ my_materials| length }})</h1>
-    <section>
-        <table>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Materials I own ({{ my_materials| length }})
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <table  class="table table-striped table-hover">
             <tr>
                 <th>ID</th>
                 <th>Serial Number</th>
@@ -132,23 +118,11 @@
             <tr><td>None</td></tr>
             {% endfor %}
         </table>
-    </section>
-    <div class="pagination">
-        <span class="step-links">
-            {% if my_materials.has_previous %}
-                <a href="?my_materials_page=1">&laquo; first</a>
-                <a href="?my_materials_page={{ my_materials.previous_page_number }}">previous</a>
-            {% endif %}
-    
-            <span class="current">
-                Page {{ my_materials.number }} of {{ my_materials.paginator.num_pages }}.
-            </span>
-    
-            {% if my_materials.has_next %}
-                <a href="?my_materials_page={{ my_materials.next_page_number }}">next</a>
-                <a href="?my_materials_page={{ my_materials.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+        {% include "pagination.html" with page_obj=my_materials page_param="borrowed_page" %}
+      </div>
     </div>
-</section>
+  </div>
+</div>
 {% endblock %}
+
+
