--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -5,8 +5,12 @@
 
 {% block content %}
 <h1>Materials</h1>
+<p>
+    <a href="{% url "add-material" %}" class="btn btn-outline-success" aria-current="page">Add Material</a>
+</p>
+
 <section>
-    <table>
+    <table class="table table-striped table-hover">
         <tr>
             <th>ID</th>
             <th>Serial Number</th>
@@ -30,6 +34,6 @@
         </tr>
         {% endfor %}
     </table>
-    {% include "pagination.html" %}
+    {% include "pagination.html" with page_param="page" %}
 </section>
 {% endblock %}
