--- a/netaccess/matman/templates/matman/material_create.html
+++ b/netaccess/matman/templates/matman/material_create.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
-{% load bootstrap5 %}
+{% load crispy_forms_tags %}
 
 {% block title %}Add Material{% endblock %}
 
 {% block content %}
 <h1>Add Material</h1>
 <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {{ formset.non_form_errors }}
-    {% bootstrap_formset formset %}
-    {% buttons %}
-    <input type="submit" value="Save" name="save" class="btn btn-primary">
-    <input type="submit" value="Save and add another" name="add_other" class="btn btn-secondary">
-    {% endbuttons %}
+    {{ csrf_token }}
+    {% crispy form %}
+    {% crispy formset %}
+    <div>
+        <input type="submit" value="Save" name="save" class="btn btn-primary">
+        <input type="submit" value="Save and add another" name="add_other" class="btn btn-secondary">
+    </div>
 </form>
 {% endblock %}
