--- a/netaccess/matman/templates/matman/scheme_edit.html
+++ b/netaccess/matman/templates/matman/scheme_edit.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <h1>Edit scheme {{ object.name }}</h1>
-<table>
+<table class="table table-striped table-hover d-inline-flex my-3">
     <tr>
         <th>Prefix:</th>
         <td>{{ object.prefix }}</td>
