--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -8,7 +8,7 @@
 <h1>{{ object }}</h1>
 <section>
     {% include "matman/slideshow.html" with pictures=object.pictures %}
-    <table class="vertical-table">
+    <table class="table table-striped table-hover d-inline-flex my-3">
         <tr>
             <th>Serial Number:</th>
             <td>{{ object.serial_number }}</td>
@@ -52,18 +52,19 @@
         </tr>
         {% endwith %}
     </table>
-    <h2>Description</h2>
-        <section class="descriptionbox">
+    <h4>Description</h4>
+        <section class="border border-dark rounded">
             {{ object.description|markdown }}
         </section>
-    <p><a class="btn btn-secondary" href="{% url "material-edit" object.identifier %}">Edit</a></p>
+    <div class="d-flex">
+        <a class="btn btn-secondary m-1" href="{% url "material-edit" object.identifier %}">Edit</a>
+        {% if object.owner != user and not object.get_active_borrow %}
+        <a class="btn btn-primary m-1" href="{% url "borrow" object.identifier %}">Borrow Item</a>
+        {% endif %}
+        {% if object.get_active_borrow.borrowed_by == user %}
+        <a class="btn btn-primary m-1" href="{% url "return" object.identifier %}">Return Item</a>
+        {% endif %}
+    </div>
 </section>
 
-
-{% if object.owner != user and not object.get_active_borrow %}
-<p><a class="btn btn-primary" href="{% url "borrow" object.identifier %}">Borrow Item</a></p>
-{% endif %}
-{% if object.get_active_borrow.borrowed_by == user %}
-<p><a class="btn btn-primary" href="{% url "return" object.identifier %}">Return Item</a></p>
-{% endif %}
 {% endblock %}
