--- a/netaccess/matman/templates/matman/profile.html
+++ b/netaccess/matman/templates/matman/profile.html
@@ -4,12 +4,17 @@
 {% block title %}My Materials{% endblock %}
 
 {% block content %}
-<h1>Materials of {{ user }}</h1>
-<section>
-    {% materials_borrowed user as mb %}
-    <h1>Materials I have currently borrowed ({{ md| length }})</h1>
-    <section>
-        <table>
+<h1>Profile for user {{ user.username }} ({{ user.first_name }} {{ user.last_name }})</h1>
+<div class="accordion" id="itemAccorion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Currently borrowed ({{ borrowed| length }})
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+         <table class="table table-striped table-hover">
             <tr>
                 <th>ID</th>
                 <th>Owner</th>
@@ -20,7 +25,7 @@
                 <th>Location</th>
                 <th>Tags</th>
             </tr>
-            {% for object in mb %}
+            {% for object in borrowed %}
             <tr>
                 <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
                 <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
@@ -34,14 +39,20 @@
             {% empty %}
             <tr><td>None</td></tr>
             {% endfor %}
-        </table>
-    </section>
-</section>
-<section>
-    {% materials_borrowed_fromme user as mf %}
-    <h1>Materials currently borrowed from me ({{ mf| length }})</h1>
-    <section>
-        <table>
+         </table>
+         {% include "pagination.html" with page_obj=borrowed page_param="borrowed_page" %}
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Currently borrowed to others ({{ lent| length }})
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+         <table class="table table-striped table-hover">
             <tr>
                 <th>ID</th>
                 <th>Borrowed By</th>
@@ -50,15 +61,51 @@
                 <th>Manufacturer</th>
                 <th>Department</th>
                 <th>Location</th>
-                <th>Owner</th>
                 <th>Tags</th>
             </tr>
-            {% for object in mf %}
+            {% for object in lent %}
             <tr>
                 <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
                 {% with by=object.get_active_borrow.borrowed_by %}
                 <td><a href="{% url "profile" by %}">{{ by }}</a></td>
                 {% endwith %}
+                <td>{{ object.serial_number }}</td>
+                <td>{{ object.material_number }}</td>
+                <td>{{ object.manufacturer }}</td>
+                <td>{{ object.department }}</td>
+                <td>{{ object.location }}</td>
+                <td>{{ object.tags.all|join:", " }}</td>
+            </tr>
+            {% empty %}
+            <tr><td>None</td></tr>
+            {% endfor %}
+         </table>
+         {% include "pagination.html" with page_obj=lent page_param="borrowed_page" %}
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Owned Materials ({{ my_materials| length }})
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <table  class="table table-striped table-hover">
+            <tr>
+                <th>ID</th>
+                <th>Serial Number</th>
+                <th>Material Number</th>
+                <th>Manufacturer</th>
+                <th>Department</th>
+                <th>Location</th>
+                <th>Owner</th>
+                <th>Tags</th>
+            </tr>
+            {% for object in my_materials %}
+            <tr>
+                <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
                 <td>{{ object.serial_number }}</td>
                 <td>{{ object.material_number }}</td>
                 <td>{{ object.manufacturer }}</td>
@@ -71,36 +118,11 @@
             <tr><td>None</td></tr>
             {% endfor %}
         </table>
-    </section>
-</section>
-<section>
-    {% materials_owned user as mo %}
-    <h1>Materials I own ({{ mo| length }})</h1>
-    <section>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Serial Number</th>
-                <th>Material Number</th>
-                <th>Manufacturer</th>
-                <th>Department</th>
-                <th>Location</th>
-                <th>Tags</th>
-            </tr>
-            {% for object in mo %}
-            <tr>
-                <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
-                <td>{{ object.serial_number }}</td>
-                <td>{{ object.material_number }}</td>
-                <td>{{ object.manufacturer }}</td>
-                <td>{{ object.department }}</td>
-                <td>{{ object.location }}</td>
-                <td>{{ object.tags.all|join:", " }}</td>
-            </tr>
-            {% empty %}
-            <tr><td>None</td></tr>
-            {% endfor %}
-        </table>
-    </section>
-</section>
+        {% include "pagination.html" with page_obj=my_materials page_param="borrowed_page" %}
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
+
+
