--- a/netaccess/matman/templates/matman/scheme_list.html
+++ b/netaccess/matman/templates/matman/scheme_list.html
@@ -5,15 +5,27 @@
 
 {% block content %}
 <h1>Schemes</h1>
-<section>
-    <a href="{% url "add-scheme" %}">Create new scheme</a>
-    <ul>
-        {% for object in object_list %}
-        <li>
-            <a href="{% url "edit-scheme" object.id %}">{{ object.name }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-    {% include "pagination.html" %}
-</section>
+<p>
+    <a href="{% url "add-scheme" %}" class="btn btn-outline-success" aria-current="page">Add Scheme</a>
+</p>
+<table class="table table-striped table-hover">
+    <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Prefix</th>
+        <th>Numlen</th>
+        <th>Potfix</th>
+    </tr>
+    {% for object in object_list %}
+    <tr>
+        <th><a href="{% url "edit-scheme" object.id %}">{{ object.name }}</a></th>
+        <td>{{ object.description }}</td>
+        <td>{{ object.prefix }}</td>
+        <td>{{ object.numlen }}</td>
+        <td>{{ object.postfix }}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% include "pagination.html" with page_param="page" %}
+
 {% endblock %}
