Furher styling/structuring, add Comment model

--- a/netaccess/matman/templates/matman/material_create.html
+++ b/netaccess/matman/templates/matman/material_create.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1>Add Material</h1>
 <form method="post" enctype="multipart/form-data">
-    {{ csrf_token }}
+    {% csrf_token %}
     {% crispy form %}
     {% crispy formset %}
     <div>
