--- a/netaccess/matman/templates/matman/scheme_edit.html
+++ b/netaccess/matman/templates/matman/scheme_edit.html
@@ -1,29 +1,27 @@
 {% extends "base.html" %}
-{% load bootstrap5 %}
+{% load crispy_forms_tags %}
 
 {% block title %}Add Material{% endblock %}
 
 {% block content %}
 <h1>Edit scheme {{ object.name }}</h1>
-<table class="table table-striped table-hover d-inline-flex my-3">
+<table class="table d-inline-flex my-3">
     <tr>
-        <th>Prefix:</th>
+        <th>Prefix</th>
+        <th>Numlen</th>
+        <th>Postfix</th>
+    </tr>
+    <tr>
         <td>{{ object.prefix }}</td>
-    </tr>
-    <tr>
-        <th>Numlen:</th>
         <td>{{ object.numlen }}</td>
-    </tr>
-    <tr>
-        <th>Postfix:</th>
         <td>{{ object.postfix }}</td>
     </tr>
 </table>
 <form method="post">
-     {% csrf_token %}
-    {% bootstrap_form form %}
-    {% buttons %}
-    <input type="submit" value="Update" class="btn btn-primary">
-    {% endbuttons %}
+    {% csrf_token %}
+    {% crispy form %}
+    <div>
+        <input type="submit" value="Update" class="btn btn-primary">
+    </div>
 </form>
 {% endblock %}
